# OperationDispatcher

./: README.md  pyproject.toml
examples/: dispatch_queue.py  dispatcher.py  dispatcher_dual_interface.py  dispatcher_mcp.py  dispatcher_openapi.py  dispatcher_visualization.py  flask_operation_manager_app.py  flask_scheduler_app.py  history_gantt_and_KPIs.ipynb  operation_manager_callbacks_example.py  plain_schedule_example.py
src/operation_dispatcher/: __init__.py  action_descriptions.py  dispatch_queue.py  models.py  notification_handler.py  operation_dispatcher.py  operation_dispatcher_mcp.py  operation_dispatcher_openapi.py  request_handler.py  retry_policy.py  runtime_controller.py
src/operation_dispatcher/diagnostics/: __init__.py  history_analyzer.py
src/operation_dispatcher/services/: __init__.py  event_service.py  history_service.py  mutation_service.py  operation_lifecycle_service.py  runtime_service.py  state_store.py
src/operation_dispatcher/utils/: __init__.py  change_tracker.py  (+2 more)
src/operation_manager/: __init__.py  models.py  notification_handler.py  operation_manager.py  operation_manager_openapi.py  request_handler.py  schedule.py
src/operation_scheduler/: __init__.py  models.py  operation_manager.py  schedule.py  scheduler.py  scheduler_openapi.py
tests/: conftest.py  test_dispatch_queue.py  test_history_analyzer.py  test_operation_dispatcher.py  test_operation_dispatcher_mcp.py  test_operation_dispatcher_openapi.py  test_operation_manager.py  test_operation_manager_openapi.py  test_schedule.py  test_scheduler.py  test_scheduler_openapi.py
(+3 files in other folders)
