[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operation-dispatcher"
version = "0.1.0"
description = "Lightweight operation dispatcher package for managing and executing operations"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12,<3.13"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
  "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
api = [
  "flask>=3.0,<4.0",
  "flasgger>=0.9.7.1,<1.0",
]
mcp = [
  "fastmcp>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
